added jpt filter